[project]
name = "radient"
version = "2024.7.20"
authors = [
  { name="Frank Liu", email="frank@frankzliu.com" },
]
requires-python = '>=3.8'
description = "Turn unstructured data into vectors"
readme = "README.md"
dependencies=[
    "graphlib_backport>=1.0.3; python_version <= '3.8'",
    "numpy >= 1.19",
    "pip >= 20.1",
]

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/fzliu/radient"
Issues = "https://github.com/fzliu/radient/issues"
