[project]
name = "radient"
version = "2024.11.28"
authors = [
  { name="Frank Liu", email="frank@frankzliu.com" },
]
requires-python = '>=3.9'
description = "Turn unstructured data into vectors"
readme = "README.md"
dependencies=[
    "numpy >= 1.19",
    "pip >= 20.1",
]

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/fzliu/radient"
Issues = "https://github.com/fzliu/radient/issues"
